--- a/src/main/resources/templates/admin/member/member-detail.html
+++ b/src/main/resources/templates/admin/member/member-detail.html
@@ -120,9 +120,20 @@
                             <span th:case="'PET_SITTER'">돌봄사</span>
                             <span th:case="*">알 수 없음</span>
                         </span></p>
+        <strong>소셜 제공자:</strong>
+        <span th:if="${member.socialProvider != null}">
+            <span th:if="${member.socialProvider.name() == 'KAKAO'}">
+                카카오
+            </span>
+            <span th:if="${member.socialProvider.name() == 'NAVER'}">
+                네이버
+            </span>
+            <span th:if="${member.socialProvider.name() == 'GOOGLE'}">
+                구글
+            </span>
+        </span><br>
         <p><strong>소개:</strong> <span th:utext="${member.introduction}"></span></p>
         <br>
-        <p><strong>소셜 로그인:</strong> <span th:text="${member.socialProvider}"></span></p>
         <p><strong>회원 상태:</strong>
             <span th:text="${member.isDeleted ? '탈퇴' : '활동 중'}"
                   th:classappend="${member.isDeleted ? 'text-danger' : 'text-success'}"></span>
