--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -91,6 +91,9 @@
                 <div class="card-footer text-center">
                     <p>아직 계정이 없으신가요? <a th:href="@{/pets-care/signup}">회원가입</a></p>
                 </div>
+                <a href="/oauth2/authorization/google">
+                    <img src="/images/google-login.png">
+                </a>
             </div>
         </div>
     </div>
