-로그인 페이지(구글 로그인 추가)

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -88,12 +88,15 @@
                         <button type="submit" class="btn btn-primary btn-block">로그인</button>
                     </form>
                 </div>
+                <div style="text-align: center;">
+                    <a href="/oauth2/authorization/google">
+                        <img src="/images/google-login.png">
+                    </a>
+                </div>
+                <br>
                 <div class="card-footer text-center">
                     <p>아직 계정이 없으신가요? <a th:href="@{/pets-care/signup}">회원가입</a></p>
                 </div>
-                <a href="/oauth2/authorization/google">
-                    <img src="/images/google-login.png">
-                </a>
             </div>
         </div>
     </div>
