--- a/src/main/resources/templates/member/edit-member.html
+++ b/src/main/resources/templates/member/edit-member.html
@@ -95,8 +95,8 @@
     <h2 class="text-center">👤 회원 정보 수정 👤</h2>
     <form th:action="@{/api/pets-care/members/{memberId}(memberId=${currentUser.id})}" method="post" id="editProfileForm" onsubmit="return updateMember(event)">
         <input type="hidden" name="_method" value="PUT">  <!-- 이 부분을 추가 -->
-        <div class="form-group" th:if="${currentUser.socialProvider == null}">
-            <label for="password">비밀번호</label>
+        <div class="form-group" th:if="${currentUser.socialProvider == null or (currentUser.socialProvider != null and currentUser.socialProvider.name() == 'NONE')}">
+        <label for="password">비밀번호</label>
             <input type="password" id="password" name="password" class="form-control" minlength="8" maxlength="20">
         </div>
 
