-고객: 예약된 돌봄 상세 정보 페이지(펫시터 연락처 필드 추가 + 필드 데이터 별 이모티콘 추가)

--- a/src/main/resources/templates/reservation/reservation-detail.html
+++ b/src/main/resources/templates/reservation/reservation-detail.html
@@ -92,7 +92,7 @@
 </nav>
 
 <div class="container mt-5">
-    <h2 class="text-center">예약 상세 정보</h2><br>
+<!--    <h2 class="text-center">예약 상세 정보</h2><br>-->
 
     <!-- 예약 정보 -->
     <div class="reservation-info">
@@ -111,19 +111,20 @@
                  style="width: 150px; height: 150px; object-fit: cover;">
         </div>
 
-        <p><strong>고객 닉네임:</strong> <span th:text="${reservation.customerNickName}"></span></p>
-        <p><strong>펫시터:</strong> <span th:text="${reservation.sitterName}"></span></p>
+        <p><strong>🏷️ 고객 닉네임:</strong> <span th:text="${reservation.customerNickName}"></span></p>
+        <p><strong>🐶 펫시터:</strong> <span th:text="${reservation.sitterName}"></span></p>
         <p><strong>📅 예약일자:</strong> <span th:text="${reservation.reservationAt}"></span></p>
-        <p><strong>가격:</strong> <span th:text="${reservation.price}"></span>원</p>
-        <p><strong>우편번호:</strong> <span th:text="${reservation.zipcode}"></span></p>
-        <p><strong>상세주소:</strong> <span th:text="${reservation.address}"></span></p>
-        <p><strong>고객 요청사항:</strong> <span th:text="${reservation.requests}"></span></p>
-        <p><strong>등록일자:</strong> <span th:text="${#temporals.format(reservation.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></span></p>
+        <p><strong>💰 가격:</strong> <span th:text="${reservation.price}"></span>원</p>
+        <p><strong>📮 우편번호:</strong> <span th:text="${reservation.zipcode}"></span></p>
+        <p><strong>🏠 상세주소:</strong> <span th:text="${reservation.address}"></span></p>
+        <p><strong>📞 펫시터 연락처:</strong> <span th:text="${reservation.phoneNumber}"></span></p>
+        <p><strong>🗓️ 등록일자:</strong> <span th:text="${#temporals.format(reservation.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></span></p>
         <p>
-            <strong>예약 상태:</strong>
+            <strong>📌 예약 상태:</strong>
             <span th:classappend="${reservation.status.name() == 'RESERVATION'} ? 'text-success' : 'text-danger'"
-                  th:text="${reservation.status.name() == 'RESERVATION'} ? '예약 완료' : '취소'"></span>
+                  th:text="${reservation.status.name() == 'RESERVATION'} ? '✅ 예약 완료' : '❌ 취소'"></span>
         </p>
+        <p><strong>📝 고객 요청사항:</strong> <span th:text="${reservation.requests}"></span></p>
     </div><br>
 
     <!-- 예약된 반려동물 목록 -->
