--- a/src/main/resources/templates/admin/member/member-detail.html
+++ b/src/main/resources/templates/admin/member/member-detail.html
@@ -135,7 +135,10 @@
             <span th:text="${member.isDeleted ? '❌ 탈퇴' : '✅ 활동 중'}"
                   th:classappend="${member.isDeleted ? 'text-danger' : 'text-success'}"></span>
         </p>
-        <p><strong>📝 소개:</strong> <span th:utext="${member.introduction}"></span></p>
+        <p>
+            <strong>📝 소개:</strong>
+            <span th:utext="${member.introduction}"></span>
+        </p>
         <br>
     </div>
     <br>
