-고객: 돌봄 예약 페이지(예약 가능 날짜 - 가격 필드 표기 방식 수정)

--- a/src/main/resources/templates/reservation/new-reservation.html
+++ b/src/main/resources/templates/reservation/new-reservation.html
@@ -118,7 +118,7 @@
                 <select class="form-control" id="careAvailableId" name="careAvailableId">
                     <option th:each="date : ${reservationInfo.careAvailableDates}"
                             th:value="${date.id}"
-                            th:text="|${date.availableAt} - ${date.price}원|">
+                            th:text="|${date.availableAt} - ${#numbers.formatInteger(date.price, 3, 'COMMA')}원|">
                     </option>
                 </select>
             </div>
