--- a/src/main/resources/templates/careavailabledate/care-available-date-list.html
+++ b/src/main/resources/templates/careavailabledate/care-available-date-list.html
@@ -12,6 +12,8 @@
 <body>
 <!-- data-member-id 설정 -->
 <div id="memberData" th:data-member-id="${currentUser?.id}"></div>
+<!--회원 로그인 방식 설정 -->
+<meta name="oauth-login" th:content="${isOAuthUser}" />
 <!-- Navigation Bar (공통) -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -168,5 +170,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/js/careavailabledate/care-available-date.js"></script>
+<script src="/js/token/token.js"></script>
 </body>
 </html>
