--- a/src/main/resources/templates/careavailabledate/edit-care-available-date.html
+++ b/src/main/resources/templates/careavailabledate/edit-care-available-date.html
@@ -10,6 +10,8 @@
 <body>
 <!-- data-member-id 설정 -->
 <div id="memberData" th:data-member-id="${currentUser?.id}"></div>
+<!--회원 로그인 방식 설정 -->
+<meta name="oauth-login" th:content="${isOAuthUser}" />
 <!-- Navigation Bar (공통) -->
 <div id="error-message" class="error-message" style="display:none; color:red;"></div>
 <nav class="navbar navbar-expand-lg navbar-light">
@@ -138,6 +140,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/js/careavailabledate/care-available-date.js"></script>
+<script src="/js/token/token.js"></script>
 </body>
 </html>
 
