--- a/src/main/resources/templates/certification/edit-certification.html
+++ b/src/main/resources/templates/certification/edit-certification.html
@@ -9,6 +9,8 @@
 <body>
 <!-- data-member-id 설정 -->
 <div id="memberData" th:data-member-id="${currentUser?.id}"></div>
+<!--회원 로그인 방식 설정 -->
+<meta name="oauth-login" th:content="${isOAuthUser}" />
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -120,5 +122,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="/js/certification/certification.js"></script>
+<script src="/js/token/token.js"></script>
 </body>
 </html>
