--- a/src/main/resources/templates/pet/edit-pet.html
+++ b/src/main/resources/templates/pet/edit-pet.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div id="memberData" th:data-member-id="${currentUser?.id}"></div>
+<!--회원 로그인 방식 설정 -->
+<meta name="oauth-login" th:content="${isOAuthUser}" />
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="/pets-care/main">🐶 반려견 돌봄</a>
@@ -146,5 +148,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="/js/pet/pet.js"></script>
+<script src="/js/token/token.js"></script>
 </body>
 </html>
