--- a/src/main/resources/templates/reservable/reservable-detail.html
+++ b/src/main/resources/templates/reservable/reservable-detail.html
@@ -11,6 +11,8 @@
 <body>
 <!-- data-sitter-id 설정 -->
 <div id="sitterData" th:data-sitter-id="${reservableSitter.sitterId}"></div>
+<!--회원 로그인 방식 설정 -->
+<meta name="oauth-login" th:content="${isOAuthUser}" />
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -179,5 +181,6 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="/js/reservable/reservable-sitter-detail.js"></script>
+<script src="/js/token/token.js"></script>
 </body>
 </html>
