--- a/src/main/resources/templates/reservation/new-reservation.html
+++ b/src/main/resources/templates/reservation/new-reservation.html
@@ -8,6 +8,8 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<!--회원 로그인 방식 설정 -->
+<meta name="oauth-login" th:content="${isOAuthUser}" />
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -172,5 +174,6 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="/js/reservation/reservation.js"></script>
+<script src="/js/token/token.js"></script>
 </body>
 </html>
