--- a/src/main/resources/templates/reservation/reservation-detail.html
+++ b/src/main/resources/templates/reservation/reservation-detail.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 <div id="memberData" th:data-member-id="${currentUser?.id}"></div>
+<!--회원 로그인 방식 설정 -->
+<meta name="oauth-login" th:content="${isOAuthUser}" />
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -267,5 +269,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="/js/reservation/reservation-customer-cancel.js"></script>
 <script src="/js/review/review.js"></script>
+<script src="/js/token/token.js"></script>
 </body>
 </html>
