--- a/src/main/resources/templates/reservation/reservation-list.html
+++ b/src/main/resources/templates/reservation/reservation-list.html
@@ -9,6 +9,8 @@
     <link th:href="@{/css/reservation-list-style.css}" rel="stylesheet">
 </head>
 <body>
+<!--회원 로그인 방식 설정 -->
+<meta name="oauth-login" th:content="${isOAuthUser}" />
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -159,5 +161,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="/js/token/token.js"></script>
 </body>
 </html>
